--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body{
     width:100%;
     height: 100%;
-  background-image: url(https://images.unsplash.com/photo-1658587674488-004b38b167fd?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80);
+  background-image: url(https://https://wallpapercave.com/wp/wp4368683.jpg);
     background-size: cover;
     position: fixed;
 }
