--- a/style.css
+++ b/style.css
@@ -1,8 +1,9 @@
 body{
     width:100%;
     height: 100%;
-  background-image: url(https://images.unsplash.com/photo-1519669417670-68775a50919c?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1yZWxhdGVkfDE0fHx8ZW58MHx8fHw%3D&w=1000&q=80);
+  background-image: url('https://images.unsplash.com/photo-1519669417670-68775a50919c?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1yZWxhdGVkfDE0fHx8ZW58MHx8fHw%3D&w=1000&q=80');
     background-size: cover;
+    background-repeat:none;
     position: fixed;
 }
 
