--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body{
     width:100%;
     height: 100%;
-  background-image: url(https://i.pinimg.com/originals/a9/48/fb/a948fbfa034a11e10eecc6490c29db22.png);
+  background-image: url(https://images.unsplash.com/photo-1662485269829-cba34eb47cae?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1331&q=80);
     background-size: cover;
     background-repeat:none;
     position: fixed;
